#185 Fix caption alignment

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -409,6 +409,7 @@
       }
       .caption {
         float: right;
+        clear: right;
         margin-right: 10.7%;
       }
     }
@@ -421,6 +422,7 @@
       }
       .caption {
         float: left;
+        clear: left;
         margin-left: 10.7%;
       }
     }
